<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_trinetra"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_trinetra" />
        <item
            android:id="@+id/nav_hirak"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_hirak" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_todo"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_todo" />
            <item
                android:id="@+id/nav_reminder"
                android:icon="@drawable/ic_menu_send"
                android:title= "@string/menu_reminder" />
        </menu>
    </item>

</menu>
